--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,14 @@
 @import "header.css";
+@import "nav.css";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
