--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #fff;
+    background-color: #9C9181;
     font-family: 'Roboto', sans-serif;
     position: relative;
     /* background-color: yellow; */
@@ -9,7 +9,7 @@ nav {
 
 nav img {
     position: absolute;
-    width: 50px;
+    width: 70px;
 }
 
 nav ul {
@@ -32,8 +32,9 @@ nav ul li a {
     display: block;
     height: 50px;
     line-height: 50px;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    font-size: 1.6rem;
+    background-color: #9C9181;
+    border: 1px solid #4F402A;
     flex-basis: 20%;
     text-decoration: none;
     width: 160px;
@@ -44,13 +45,14 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    border: 1px solid #000;
+    background-color: #D7AE72;
+
 }
 
-nav>ul>li>a:hover {
-    background-color: #000;
+/* nav>ul>li>a:hover {
+    background-color: #D7AE72;
     color: #fff;
-}
+} */
 
 nav ul li ul {
     position: absolute;
