--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 @import "header.css";
 @import "nav.css";
+@import "info.css";
+@import "news.css";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    font-size: 10px;
 }
 
 body {
